# AwesomeCppTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  main.cpp
examples/boost/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
examples/boost/cmake/: functions.cmake
examples/boost/src/: main.cpp
examples/c++17_filesystem/: CMakeLists.txt  README.md
examples/c++17_filesystem/src/: main.cpp
headers/: dummy.hpp
src/: main.cpp
